--- a/stely.css
+++ b/stely.css
@@ -3,8 +3,10 @@ body{
 }
 
 p{
-    text-align:center ;
+    
+  h1  text-align:center ;
+
 }
 em strong{
-    color: red;
+    color: rgb(123, 255, 0);
 }
