--- a/stely.css
+++ b/stely.css
@@ -3,10 +3,13 @@ body{
 }
 
 p{
-    
-  h1  text-align:center ;
 
+  h1  text-align:center ;
 }
+
+#missao
+font-size:20xp
 em strong{
-    color: rgb(123, 255, 0);
-}
+    color:rgb(145,18,230)
+    }
+    
